navExpand event fixed, 404 page, sidescroll visible

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,5 +1,6 @@
 body {
   background-color:lightgray;
+  overflow-y: scroll;
 }
 
 .fade-enter-active, .fade-leave-active {
